--- a/my_app/package.json
+++ b/my_app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@pdftron/webviewer": "^10.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,11 +12,16 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "bootstrap": "^5.3.1",
+    "lottie-react-native": "^6.2.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-social-icons": "^6.3.0",
+    "react-tsparticles": "^2.12.2",
+    "styled-components": "^6.0.7",
+    "tsparticles": "^2.12.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
